# FastAPI-ML

./: .gitignore  Dockerfile  README.md  docker-compse.yml  pyproject.toml  pyrightconfig.json  streamlit_app.py
app/: main.py
app/api/: routes_auth.py  routes_predict.py
app/cache/: redis_cache.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/middleware/: logging_middleware.py
app/services/: model_service.py
training/: train_model.py  train_utils.py
