[project]
name = "fastapi-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "prometheus-fastapi-instrumentator",
    "pydantic",
    "python-dotenv",
    "python-jose[cryptography]",
    "pandas",
    "jupyter",
    "ipykernel",
    "redis",
    "joblib",
    "scikit-learn",
]
